# solvable-games

./: README.md  solvable-games.cabal
.stack-work/ghci/30d83b91/: cabal_macros.h
.stack-work/install/x86_64-linux/lts-6.12/7.10.3/flag-cache/: arithmoi-0.4.2.0-b1262920cb549be52c2e57b665071005  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  parallel-3.2.1.0-13fa56575e4752a542f0b618706881f7  random-1.1-7d035f9e510822cd64834106e4acc4b7
src/: Buchstabensalat.hs  ConnectN.hs  FoxGooseBeans.hs  Futoshiki.hs  InshiNoHeya.hs  Main.hs  NQueens.hs  NimPencils.hs  Nonograms.hs  Sudoku.hs  TicTacToe.hs
src/Logic/: GameLogic.hs  Utils.hs
src/ParSudoku/: Sudoku4.hs  Sudoku6.hs
using-list/: using-list.cabal  using-list.eventlog
using-list/.stack-work/install/x86_64-linux/lts-6.9/7.10.3/flag-cache/: parallel-3.2.1.0-13fa56575e4752a542f0b618706881f7  random-1.1-7d035f9e510822cd64834106e4acc4b7
using-list/src/: Buchstabensalat.hs  ConnectN.hs  Futoshiki.hs  GameLogic.hs  InshiNoHeya.hs  Main.hs  NQueens.hs  Nonograms.hs  Sudoku4.hs  Sudoku6.hs  Sudoku9.hs  TicTacToe.hs
using-map/: using-map.cabal  using-map.eventlog
using-map/.stack-work/install/x86_64-linux/lts-6.9/7.10.3/flag-cache/: using-map-0.1.0.0
using-map/src/: ConnectN.hs  Main.hs  Sudoku4.hs  Sudoku6.hs  Sudoku9.hs  SudokuN.hs
