name:                using-list
version:             0.1.0.0
synopsis:            Implementations of sequential games using Selection Monad.
description:         Please see README.md
homepage:            https://github.com/phtb233/using-list#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Oppong Beduh
maintainer:          stephenoppongbeduh@gmail.com
copyright:           2016 Stephen Oppong Beduh
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable using-list
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -eventlog 
                        "-with-rtsopts=-N -ls -s"
  other-modules:       
                       ConnectN
                     , Sudoku
                     , NQueens
                     , TicTacToe
                     , Buchstabensalat
                     , Nonograms
                     , Futoshiki
                     , InshiNoHeya
                     , NimPencils
                     , FoxGooseBeans
                     , ParSudoku.Sudoku4
                     , ParSudoku.Sudoku6
                     , Logic.GameLogic
                     , Logic.Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , containers
                     , deepseq
                     , random
                     , arithmoi
