name:                using-map
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/phtb233/using-map#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Oppong Beduh
maintainer:          stephenoppongbeduh@gmail.com
copyright:           2016 Stephen Oppong Beduh
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable using-map
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -eventlog 
                        "-with-rtsopts=-N -ls -s"
  other-modules:       
                       Sudoku4
                     , Sudoku6
                     , Sudoku9
                     , SudokuN
                     , ConnectN
                     , GameLogic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parallel
                     , containers
                     , deepseq
                     , random
